style.css
@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');

* { 
	box-sizing: border-box;
    font-family: 'Dosis', sans-serif;
    margin: 0;
    padding: 0;
}
html, body {
    height: 100%;
    width: 100%;
    background: #FAF9F6;
	color: #000;
}
.main-body {
    flex: auto;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

body {
    display: flex;
    flex-direction: column;
}


.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 48px;
    padding: 42px 40px;
    background-image: linear-gradient(rgb(0,0,0,.45)
    , rgb(0,0,0,0));


}
a:hover .dissapeared{
    opacity: 1;
}

.dissapeared {
    opacity: 0;
}



h1 {
    color: white;
    font-weight: 900;
    font-size: 60px;
    font-weight: 700;
}


#the-time, .button {
    display: flex;
    justify-content: center;
    align-items: center;
}



h2 {
    font-size: 68px;
    font-weight: 700;
    margin: 0;
    color: white;
    padding: 16px;
    position: absolute;
    border-radius: 30%;
    -webkit-animation:fadein .3s, moveX 8.05s linear 0s infinite alternate, moveY 9.4s linear 0s infinite alternate;
    -moz-animation: fadein .3s, moveX 10.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
    -o-animation: fadein .3s, moveX 10.05s linear 0s infinite alternate, moveY 3.4s linear 0s infinite alternate;
    animation:fadein .3s, moveX 18.05s linear 0s infinite alternate, moveY 20.4s linear 0s infinite alternate;

}

button {
    background-color: Transparent;
    color: white;
    font-weight: 700;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 80px;
    padding: 8px;
    margin: 4px 2px;
    border: none;

    -webkit-transition: opacity 1s ease-in-out;
    -moz-transition: opacity 1s ease-in-out;
    -ms-transition: opacity 1s ease-in-out;
    -o-transition: opacity 1s ease-in-out;
    transition: opacity 1s ease-in-out;

}

button.fade {
    opacity: 0;
    button.style.display = "none";
    button.style.visibility = "hidden";

}
.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
    font-size: 14px;
    padding: 16px 0px;
}

a {
    text-decoration: none;
    color: white;
    font-size: 28px;
    font-weight: 700;

}



ul {
    display: flex;
    gap: 20px;
    list-style-type: none;
}

.content {
    z-index: 20;
}
p {
    padding-bottom: 4px;
}
p:hover {
    color: aliceblue;
}


.video-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background: var(--primary-color) url('static.png') no-repeat center center/cover;
}
.video-container video {
    min-width: 100%;
    min-height: 100%;
    object-fit: cover;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.video-container:after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url("overlay-3.jpeg");
    background-size: cover;

    opacity: 28%;

}

@-webkit-keyframes moveX {
    from { left: 0; } to { left: -webkit-calc(100% - 370px); }
  }
  @-moz-keyframes moveX {
    from { left: 0; } to { left: -webkit-calc(100% - 370px); }
  }
  @-o-keyframes moveX {
    from { left: 0; } to { left: -webkit-calc(100% - 370px); }
  }
  @keyframes moveX {
    from { left: 0; } to { left: -webkit-calc(100% - 370px); }
  }

  @-webkit-keyframes moveY {
    from { top: 60px; } to { top: -webkit-calc(100% - 100px); }
  }
  @-moz-keyframes moveY {
    from { top: 60px; } to { top: -webkit-calc(100% - 100px); }
  }
  @-o-keyframes moveY {
    from { top: 60px; } to { top: -webkit-calc(100% - 100px); }
  }
  @keyframes moveY {
    from { top: 60px; } to { top: -webkit-calc(100% - 100px); }
  }

  .hover-underline-animation {
    display: inline-block;
    position: relative;
  }
  
  .hover-underline-animation:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 3px;
    border-radius: 10px;
    bottom: 0;
    left: 0;
    background-color: white;
    transform-origin: bottom right;
    transition: transform 0.25s ease-out;
  }
  
  .hover-underline-animation:hover:after {
    transform: scaleX(1);
    transform-origin: bottom left;
  }

  p.hover-underline-animation:after {
    height: 1.5px;
  }
  button.hover-underline-animation:after {
    height: 5px;
  }

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@media (max-width: 590px) {
    .header {
        flex-direction: column;
    }
    @-webkit-keyframes moveY {
        from { top: 130px; } to { top: -webkit-calc(100% - 100px); }
      }
      @-moz-keyframes moveY {
        from { top: 130px; } to { top: -webkit-calc(100% - 100px); }
      }
      @-o-keyframes moveY {
        from { top: 130px; } to { top: -webkit-calc(100% - 100px); }
      }
      @keyframes moveY {
        from { top: 130px; } to { top: -webkit-calc(100% - 100px); }
      }


}

